# MyGym

./: GERER LA DISPONIBILITE.dia  GERER LES ADHERENTS.dia  GERER LES COACHS.dia  GERER LES CONSEILS.dia  GERER LES FICHES.dia  GERER LES FONCTIONNAIRES.dia  GERER LES RENDEZ-VOUS.dia  GERER LES SALLES.dia  GERER PLANNING.dia  README.md  RECEP.dia  adherent.bmpr  administrateur.bmpr  administrateur.dia  cahier de charge.docx  coach.bmpr  dieticien.bmpr  kine.balsamique Mockupus.bmpr  nutro.bmpr  nutro.dia
GERE LES FONCTIONNAIRES/: GERER LES DIETICIENS.dia  GERER LES KINESITERAPEUTES.dia  GERER LES RECEPTIONNISTES.dia
kine/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  kine.glade.bak  kine.gladep
kine/autom4te.cache/: output.0  requests  traces.0  traces.1
kine/po/: Makefile  Makefile.in
kine/src/: FM.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  dispo.txt  fichekine.c  fichekine.h  interface.c  interface.h  kine  kineaffrdv .h  kineaffrdv.c  main.c  personne.c  personne.h  users.txt
kine/src/.deps/: callbacks.Po  fichekine.Po  kineaffrdv.Po
